# rest_api_proj

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  server.py
migrations/: env.py
migrations/versions/: 19a726d007e9_init.py  dfbc7043c847_add_year_on_song.py
src/config/: settings.py
src/infra/db/settings/: connection.py
src/main/: app.py
src/main/routes/: songs.py
