[tool.poetry]
name = "rest-api-proj"
version = "0.1.0"
description = ""
authors = ["Robson Andrade <robsonas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.16"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
